@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 57ff5ce93b40a068c2a044eff92aa7a6bf3603e3 ChangeLog
+SHA1 d01cd2509c9803f79758ffa5a0ec621f65e6f127 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 6a4c64a3d57045d374e89f95f9f943c6532293f9 META.yml
+SHA1 badb68737013a80b877ca0bf8ca49677bfe7d7ce META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 863d0cce2d63e2241e622db07460c3807d9203fc lib/Term/Menus.pm
+SHA1 bee2b947e57a1596ef955e4994d7379f67204814 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDZO+EACgkQJM3IZYB6aOqQfgCfVH3SJrfKvDvmKWvwa9YA24Np
-SwkAn35HEF9Xic1Iw/Lo86kF90i/1yGl
-=GbbC
+iEYEARECAAYFAlDh3gYACgkQJM3IZYB6aOo5EQCeO69l8ZO+LROG0h3vbtUWrUcj
+N4gAn2qGY47Az/4/rr5cllH7D8QlkngN
+=OrAS
 -----END PGP SIGNATURE-----
