@@ -1,3 +1,13 @@
+2012-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.24 released.
+
+        * Happy New Year!
+
+	* Use --login Id from FullAuto when running with
+          FullAuto
+
+
 2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.23 released.
